# cosmic-express-solver

./: .dockerignore  .ghci  .gitignore  Dockerfile  README.md  cosmic-express-solver.cabal
cmd/cosmic-solver/: Main.hs
src/Games/CosmicExpress/: Debug.hs  Level.hs  Levels.hs  Solve.hs
src/Games/CosmicExpress/Level/: Board.hs
src/Games/CosmicExpress/Levels/: Andromeda.hs
src/Games/CosmicExpress/Solve/: Solvability.hs  Step.hs
