cabal-version: 3.0
name:          cosmic-express-solver
version:       0.1.0.0
tested-with:   GHC ==9.4.7

common options
  build-depends:      relude ==1.2.1.0
  default-language:   GHC2021
  default-extensions:
    NoFieldSelectors
    NoImplicitPrelude
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDeriving
    ExplicitNamespaces
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    StrictData
    TemplateHaskell
    TypeFamilies

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints -Wunused-packages

library
  import:          options
  build-depends:
    , aeson              ==2.2.1.0
    , rainbow            ==0.34.2.2
    , search-algorithms  ==0.3.2
    , fast-downward ==0.2.3.0

  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Games.CosmicExpress.Debug
    Games.CosmicExpress.Level
    Games.CosmicExpress.Level.Board
    Games.CosmicExpress.Levels.Andromeda
    Games.CosmicExpress.Solve
    Games.CosmicExpress.Solve.Solvability
    Games.CosmicExpress.Solve.Step

executable cosmic-solver
  import:         options
  ghc-options:    -threaded -rtsopts
  build-depends:
    , aeson                  ==2.2.1.0
    , base                   ==4.17.2.0
    , cosmic-express-solver
    , directory              ==1.3.7.1
    , filepath               ==1.4.2.2
    , optparse-applicative   ==0.18.1.0

  hs-source-dirs: cmd/cosmic-solver
  main-is:        Main.hs

  -- cabal-fmt: expand cmd/cosmic-solver -Main
  other-modules:
